made some change

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <header>
-            <div class="container">
-                <h1>Hello, my name is <span class="span-big">Pooh</span></h1>
+            <div class="container header">
+                <h1 id="frontHi">Hello, my name is <span class="span-big frontBig">Pooh</span></h1>
                 <img src="img/pooh.png" alt="Pooh bear">
             </div>
         </header>
