--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="container header">
-                <h1 id="frontHi">Hello, my name is <span class="span-big frontBig">Pooh</span></h1>
+                <h1 id="frontHi">Hello, my name is <span id="fontBig" class="span-big">Pooh</span></h1>
                 <img src="img/pooh.png" alt="Pooh bear">
             </div>
         </header>
