--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="img/pooh.png" alt="Pooh bear">
             </div>
         </header>
-        
+        <main>
         <section class="section-one">
             <div class="container">
                 <h2>I am hungry for <span class="span-title">honey</span></h2>
@@ -35,5 +35,6 @@
                 <a href="#" class="btn btn-two">see all my honey</a>
             </div>
         </section>
+    </main>
     </body>
 </html>
