--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
@@ -16,7 +18,7 @@
         </header>
         <main>
         <section class="section-one">
-            <div class="container">
+            <div class="container what-the">
                 <h2>I am hungry for <span class="span-title">honey</span></h2>
                 <p>My favorite honey comes from maple trees. These trees have the best bee hives.
                 I try to get the honey but I often fail. I fail alot but when I manage to get the honey, it is well worth it.
@@ -24,8 +26,8 @@
                 <a href="#" class="btn">see my map</a>
             </div>
         </section>
-        <section class="section-two">
-            <div class="container">
+        <section class="section-two inverse">
+            <div class="container what-the">
                 <h2>My most recent <span class="span-title">catch</span></h2>
                 <h3>Honey from Maryland</h3>
                 <p>Captured by <span class="color-diff">Pooh</span> on <span class="color-diff">July 3, 1990</span></p>
